add deleteProductById api endpoint
